--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mikefeng110808/micro-util",
-  "version": "0.0.10",
+  "version": "0.0.19",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/fengjin08122359/micro-util#readme",
   "dependencies": {
+    "async-validator": "^3.0.3",
     "swfobject": "^2.2.1"
   },
   "devDependencies": {
